--- a/education.html
+++ b/education.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>John Doe | Education</title>
+    <title>Ankur Shukla | Education</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
@@ -289,14 +289,14 @@
 
       <div class="timeline-content js--fadeInLeft">
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline1.png'); background-repeat: no-repeat; background-size: auto;"></div>
-        <div class="date date1">2021-2022</div>
+        <div class="date date1">2020-2024</div>
         <div>
-            <h2 class="timelineHeading">Columbia University</h2>
-            <h6>Masters of Science, Computer Science & Engineering</h6>
-            <li>Top 1% in the department</li>
-            <li>Best Undergraduate Researcher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h2 class="timelineHeading">Indian Institute of information Technology Vadodara</h2>
+            <h6>Bachelor of technology, Computer Science & Engineering</h6>
+            <li>7.4 cpi till 5th semester</li>
+            <li>Course completed - ML , AI , Software development , Computer Network. DBMS</li>
+            <li>9th rank in institute in Machine Learning contest by coding club</li>
+            <li>Activly participated in 6+ coding contest</li>
         </div>
       </div>
    </div> 
@@ -310,14 +310,16 @@
         <div>
             <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top"></div>
         </div>
-        <div class="date date2">2017-2021</div>
+        <div class="date date2">2018-2019</div>
         <div class="alignment">
-            <h3 class="timelineHeading2">Massachusetts Institute of Technology</h3>
-            <h6>Bachelors of Science, Computer Science & Engineering</h6>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <h3 class="timelineHeading2">Oxford Public School</h3>
+            <h6>Physics Chemistry Maths major subject</h6>
+            <li>Top 10% in the Batch</li>
+            <li>Secured 83% in 12th board</li>
+            <li>Scored 98.57 %ile in JEE Mains </li>
+
+            <li>20K ranked out of 9+ lakh student</li>
+            <!-- <li>Athlete of the Year Award</li> -->
         </div>
       </div>
 
@@ -331,14 +333,14 @@
 
       <div class="timeline-content js--fadeInLeft">
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline3.png'); background-repeat: no-repeat; background-size: auto"></div>
-        <div class="date date3">2013-2017</div>
+        <div class="date date3">2016-2017</div>
         <div class="align-third">
-            <h2 class="timelineHeading3">Delhi Public School</h2>
+            <h2 class="timelineHeading3">HP Children's Academy</h2>
             <h6>High School</h6>
-            <li>Top 1% in the department</li>
-            <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
-            <li>Athlete of the Year Award</li>
+            <li>Top 7% in the Class</li>
+            <li>Secured 89% in ICSE Board exam</li>
+            <li>Scored 86+ in Maths , Hindi, Science </li>
+            <li>Won 1st prize in tug of war </li>
         </div>
       </div>
     </div>
